...
                        android:layout_height="50dp">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="50dp"
                            android:padding="10dp"
                            android:contentDescription="@string/assistant"
                            android:src="@drawable/menu_assistant" />

                        <TextView
                            android:text="@string/assistant"
                            style="@style/standard_text_font"
                            android:layout_width="match_parent"
...
                        android:layout_height="50dp">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="50dp"
                            android:padding="10dp"
                            android:contentDescription="@string/about"
                            android:src="@drawable/icon_help" />

                        <TextView
                            android:text="Help"
                            style="@style/standard_text_font"
                            android:layout_width="match_parent"
...
