...
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="?attr/accentColor"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/side_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/content_description_menu"
        android:padding="10dp"
...
